--- a/tpl/body.twig
+++ b/tpl/body.twig
@@ -2,13 +2,17 @@
 <html class="dev no-js">
 <head>
 	<meta charset="utf-8">
-	<title>{% block title %}{% endblock %}{% if block('title') %}{{ ' &#183; ' | raw }}{% endif %}Assignment 5</title>
+	<title>{% block title %}{% endblock %}{% if block('title') %}{{ ' &#183; ' | raw }}{% endif %}University Accommodation Office</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 <body>
-	<div class="container">{% block body %}{% endblock %}</div>
+	<div class="container">
+		<h1 class="text-center"><a href="/">University Accommodation Office Web App</a></h1><br><br>
+		{% block body %}{% endblock %}
+	</div>
 </body>
 </html>
