--- a/tpl/home.twig
+++ b/tpl/home.twig
@@ -8,6 +8,7 @@
 			</div>
 			<div class="panel-body">
 				<a class="list-group-item" href="/one">Report of Manager's name and phone number for each residence hall</a>
+				<a class="list-group-item" href="/three">Details of lease agreements that include the summer semester</a>
 			</div>
 		</div>
 	</div>
