--- a/tpl/home.twig
+++ b/tpl/home.twig
@@ -9,6 +9,7 @@
 			<div class="panel-body">
 				<a class="list-group-item" href="/one">Report of Manager's name and phone number for each residence hall</a>
 				<a class="list-group-item" href="/three">Details of lease agreements that include the summer semester</a>
+				<a class="list-group-item" href="/six">Details of apartment inspections where property was found to be unsatisfactory</a>
 			</div>
 		</div>
 	</div>
