--- a/tpl/home.twig
+++ b/tpl/home.twig
@@ -10,6 +10,7 @@
 				<a class="list-group-item" href="/one">Report of Manager's name and phone number for each residence hall</a>
 				<a class="list-group-item" href="/three">Details of lease agreements that include the summer semester</a>
 				<a class="list-group-item" href="/six">Details of apartment inspections where property was found to be unsatisfactory</a>
+				<a class="list-group-item" href="/eight">Details of Students on waiting list for a housing accommodation</a>
 			</div>
 		</div>
 	</div>
