--- a/tpl/q3.twig
+++ b/tpl/q3.twig
@@ -3,6 +3,7 @@
 {% block title %}Query Three{% endblock %}
 
 {% block body %}
+	<h2>Summer Leases</h2>
 	<table class="table table-striped">
 		<thead>
 			<tr>
