--- a/tpl/q6.twig
+++ b/tpl/q6.twig
@@ -3,6 +3,7 @@
 {% block title %}Query Six{% endblock %}
 
 {% block body %}
+	<h2>Unsatisfactory Inspections</h2>
 	<table class="table table-striped">
 		<thead>
 			<tr>
