--- a/tpl/q8.twig
+++ b/tpl/q8.twig
@@ -38,7 +38,7 @@
 				<td>{{ student.city }}</td>
 				<td>{{ student.postCode }}</td>
 				<td>{{ student.phoneNO }}</td>
-				<td>{{ student.email }}</td>
+				<td><a href="mailto:{{ student.email }}">{{ student.email }}</a></td>
 				<td>{{ student.dob  | date("F j\\<\\s\\u\\p\\>S\\<\\/\\s\\u\\p\\>")  | raw }}</td>
 				<td>{{ student.gender }}</td>
 				<td>{{ student.nationality }}</td>
